--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="prawa70">
                         <h1 style="padding-left: 30px;">Biblioteka liderów dostępności</h1>
-                        <p class="smallx yellow" style="padding-left: 30px;">Polska Izby Rzemiosła Dostępnościowego</p>
+                        <p class="smallx yellow" style="padding-left: 30px;">Polska Izba Rzemiosła Dostępnościowego</p>
                         <p class="podpis yellow" style="padding-left: 30px;">© Copyleft IRDpl.pl 2023. Używaj zgodnie z licencjami udostępnionych publikacji.</p>
                     </div>
                 </div>
